--- a/skeletonHTML.html
+++ b/skeletonHTML.html
@@ -9,41 +9,44 @@
     <title>Document</title>
 </head>
 <body>
-<main class="container-flex">
-    <div class="col text-center text-bg-info rounded-top">
-        <h1>My Team</h1>
-    </div>
-    <div class="card" style="width: 15rem;">
-        <div class="card-header bg-info text-white">
-            <h5>Name</h5>
-            <h6>Manager</h6>
+<main class="justify-contents-center">
+    <div class="col p-4 text-center text-bg-info rounded-top">
+            <h1>My Team</h1>
         </div>
-        <div class="card-body">
-            <p class="card-text">ID: </p>
-            <p><a href="#" class="card-text">email@email.com</a></p>
-            <p class="card-text">Office #1</p>
+    <div class="card-deck p-2 d-flex justify-content-between">
+        <div class="card shadow" style="width: 15rem;">
+            <div class="card-header bg-info text-white">
+                <h5>Name</h5>
+                <h6>Manager</h6>
+            </div>
+            <div class="card-body">
+                <p class="card-text">ID: </p>
+                <p><a href="#" class="card-text">email@email.com</a></p>
+                <p class="card-text">Office #1</p>
+            </div>
         </div>
-    </div>
-    <div class="card" style="width: 15rem;">
-        <div class="card-header bg-info text-white">
-            <h5>Name</h5>
-            <h6>Engineer</h6>
+        <div class="card shadow" style="width: 15rem;">
+            <div class="card-header bg-info text-white">
+                <h5>Name</h5>
+                <h6>Engineer</h6>
+            </div>
+            <div class="card-body">
+                <p class="card-text">ID: </p>
+                <p><a href="#" class="card-text">email@email.com</a></p>
+                <p><a href="#" class="card-text">github</a></p>
+            </div>
         </div>
-        <div class="card-body">
-            <p class="card-text">ID: </p>
-            <p><a href="#" class="card-text">email@email.com</a></p>
-            <p><a href="#" class="card-text">github</a></p>
+        <div class="card shadow" style="width: 15rem;">
+            <div class="card-header bg-info text-white">
+                <h5>Name</h5>
+                <h6>Intern</h6>
+            </div>
+            <div class="card-body">
+                <p class="card-text">ID: </p>
+                <p><a href="#" class="card-text">email@email.com</a></p>
+                <p class="card-text">School</p>
+            </div>
         </div>
-    </div>
-    <div class="card" style="width: 15rem;">
-        <div class="card-header bg-info text-white">
-            <h5>Name</h5>
-            <h6>Intern</h6>
-        </div>
-        <div class="card-body">
-            <p class="card-text">ID: </p>
-            <p><a href="#" class="card-text">email@email.com</a></p>
-            <p class="card-text">School</p>
         </div>
     </div>
 </main>
