pushing to transfer

--- a/html/index.html
+++ b/html/index.html
@@ -19,31 +19,21 @@
                 <h6>Engineer</h6>
             </div>
             <div class="card-body">
-                <p class="card-text">ID: 42</p>
+                <p class="card-text">ID: 1</p>
                 <p><a href="mailto:schuylertjed@gmail.com" class="card-text">schuylertjed@gmail.com</a></p>
                 <p><a href="https://www.github.com/jschuyl" class="card-text">jschuyl</a></p>
             </div>
         </div><div class="card shadow" style="width: 15rem;">
                 <div class="card-header bg-info text-white">
-                    <h5>Frank</h5>
+                    <h5>Lydia</h5>
                     <h6>Manager</h6>
                 </div>
                 <div class="card-body">
-                    <p class="card-text">ID: 5</p>
-                    <p><a href="mailto:frank@frank.com" class="card-text">frank@frank.com</a></p>
-                    <p class="card-text">Office #7</p>
+                    <p class="card-text">ID: 2</p>
+                    <p><a href="mailto:lkbaker13@gmail.com" class="card-text">lkbaker13@gmail.com</a></p>
+                    <p class="card-text">Office #1</p>
                 </div>
-            </div><div class="card shadow" style="width: 15rem;">
-            <div class="card-header bg-info text-white">
-                <h5>Bobby</h5>
-                <h6>Intern</h6>
-            </div>
-            <div class="card-body">
-                <p class="card-text">ID:  2</p>
-                <p><a href="mailto:bobby@frank.com" class="card-text">bobby@frank.com</a></p>
-                <p class="card-text">School</p>
-            </div>
-        </div></div>
+            </div></div>
         </div>
     </main>
     </body>
