added video to readme

--- a/html/index.html
+++ b/html/index.html
@@ -14,26 +14,36 @@
                 <h1>My Team</h1>
             </div>
             <div class="card-deck p-2 d-flex justify-content-between"><div class="card shadow" style="width: 15rem;">
-            <div class="card-header bg-info text-white">
-                <h5>Jed</h5>
-                <h6>Engineer</h6>
-            </div>
-            <div class="card-body">
-                <p class="card-text">ID: 1</p>
-                <p><a href="mailto:schuylertjed@gmail.com" class="card-text">schuylertjed@gmail.com</a></p>
-                <p><a href="https://www.github.com/jschuyl" class="card-text">jschuyl</a></p>
-            </div>
-        </div><div class="card shadow" style="width: 15rem;">
                 <div class="card-header bg-info text-white">
-                    <h5>Lydia</h5>
+                    <h5>Mr. Manager</h5>
                     <h6>Manager</h6>
                 </div>
                 <div class="card-body">
-                    <p class="card-text">ID: 2</p>
-                    <p><a href="mailto:lkbaker13@gmail.com" class="card-text">lkbaker13@gmail.com</a></p>
-                    <p class="card-text">Office #1</p>
+                    <p class="card-text">ID: 1</p>
+                    <p><a href="mailto:manger@manger.com" class="card-text">manger@manger.com</a></p>
+                    <p class="card-text">Office #9</p>
                 </div>
-            </div></div>
+            </div><div class="card shadow" style="width: 15rem;">
+            <div class="card-header bg-info text-white">
+                <h5>The Engineer</h5>
+                <h6>Engineer</h6>
+            </div>
+            <div class="card-body">
+                <p class="card-text">ID: 23</p>
+                <p><a href="mailto:engineer@email.com" class="card-text">engineer@email.com</a></p>
+                <p><a href="https://www.github.com/theEngineeriestEngineer" class="card-text">theEngineeriestEngineer</a></p>
+            </div>
+        </div><div class="card shadow" style="width: 15rem;">
+            <div class="card-header bg-info text-white">
+                <h5>Student</h5>
+                <h6>Intern</h6>
+            </div>
+            <div class="card-body">
+                <p class="card-text">ID:  900</p>
+                <p><a href="mailto:student@school.com" class="card-text">student@school.com</a></p>
+                <p class="card-text">School</p>
+            </div>
+        </div></div>
         </div>
     </main>
     </body>
